# DVS_Filtering

./: .gitignore  CITATION.cff  README.md  test.bash  test.py  train.bash  train.py
configs/: dirs_datasets.py
configs/dataset/: dvs_lip.yaml  ncaltech.yaml  ncars.yaml  nimagenet.yaml  poker.yaml
configs/model/: cnn.yaml  snn.yaml  vit.yaml
data/dvs_lip/: class_dict.py  dataset.py
data/ncaltech101/: class_dict.py  dataset.py
data/ncars/: class_dict.py  dataset.py
data/nimagenet/: class_dict.py  dataset.py
data/utils/: augmentation.py  load_data.py  representations.py
model/: recognition.py
model/cnn/: resnet.py
model/gcn/: gcn_resnet.py  spline_model.py
model/snn/: snn_resnet.py
model/vit/: maxvit.py
models/cnn/: resnet.py
models/gcn/: spline_model.py
models/vit/: attention.py  maxvit.py
noise_generator/: CMakeLists.txt  pybind_module.cpp  test_noise.py
noise_generator/noise_cpp/: event2d.h  noise_generator_algorithm.h  struct_pack.h  timestamp.h
